# cleff-sandbox

./: .gitignore  .pre-commit-config.yaml  README.md  effects-sandbox.cabal  flake.nix  fourmolu.yaml
app/: Main.hs
docs/: README.md  architecture.md  comparison.md  developer-experience.md  exercises.md  guided-tour.md  intro.md
src/: Main.hs  SampleProgram.hs
src/Constraints/: Interact.hs  Logging.hs  Teletype.hs  UserStore.hs
src/Effects/: Interact.hs  Logging.hs  Teletype.hs  UserStore.hs
test/: SampleProgramSpec.hs  Spec.hs
test/Effects/: InteractSpec.hs
