name:                effects-sandbox
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/effects-sandbox#readme
license:             BSD3
--license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
--extra-source-files:  README.md
--                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Effects.Teletype
                       Effects.Logging
                       Effects.Interact
                       Effects.UserStore
                       SampleProgram
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , cleff
                     , containers
                     , text
  default-extensions:
    DuplicateRecordFields
    NoFieldSelectors
    DisambiguateRecordFields
    OverloadedLabels
    OverloadedRecordDot
    RecordWildCards
    LambdaCase
    BlockArguments
    GADTs
    KindSignatures
    TypeOperators
    DataKinds
    FlexibleContexts
    ImportQualifiedPost
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable effects-sandbox-exe
  main-is: Main.hs
  build-depends: base
               , cleff
               , effects-sandbox
  hs-source-dirs: app

test-suite effects-sandbox-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules: Effects.InteractSpec
                 SampleProgramSpec
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , cleff
    , containers
    , effects-sandbox
    , hspec
  default-language: Haskell2010
  default-extensions:
    DuplicateRecordFields
    NoFieldSelectors
    DisambiguateRecordFields
    OverloadedLabels
    OverloadedRecordDot
    RecordWildCards
    LambdaCase
    BlockArguments
    GADTs
    KindSignatures
    TypeOperators
    DataKinds
    FlexibleContexts
    ImportQualifiedPost
